--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,20 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  ruby-versions:
+    uses: ruby/actions/.github/workflows/ruby_versions.yml@master
+    with:
+      min_version: 3.1
+      engine: cruby
+
   build:
+    needs: ruby-versions
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby-version:
-          - 3.3
-          - 3.2
-          - 3.1
-          - '3.0'
+        ruby-version: ${{ fromJson(needs.ruby-versions.outputs.versions) }}
+        
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby ${{ matrix.ruby-version }}
